--- a/public/css/RWD_max991.css
+++ b/public/css/RWD_max991.css
@@ -1,6 +1,68 @@
 @media screen and (max-width: 991px)
 {
 
+
+	#sidebar
+	{
+	    width: 80px;
+	    height: 100vh;
+	    position: fixed;
+	    text-align: center;
+	    top: 0;
+	    left: 0;
+	    z-index: 999;
+	    background: #263238;
+	    color: white;
+	    transition: all 0.3s;
+	}
+
+	#sidebar.active
+	{
+	    margin-left: -80px;
+	}
+
+	#main.active 
+	{
+	    width: 100%;
+	}
+
+	#main
+	{
+	    width: calc(100% - 80px);
+	    transition: all 0.3s;
+	    position: absolute;
+	    min-height:100vh;
+	    top: 0;
+	    right: 0;
+	    padding: 5px 5px 5px 10px;
+	}
+
+	#sidebar ul li a {
+	    padding: 20px 10px;
+	    font-size: 0.85em;
+	}
+
+	#sidebar ul li a i {
+	    margin-right:  0;
+	    display: block;
+	    font-size: 1.8em;
+	    margin-bottom: 5px;
+	}
+
+	/* Adjust the dropdown links padding*/
+	#sidebar ul ul a {
+	    padding: 10px !important;
+	}
+
+	.dropdown-toggle::after {
+	    top: auto;
+	    bottom: 10px;
+	    right: 50%;
+	    -webkit-transform: translateX(50%);
+	    -ms-transform: translateX(50%);
+	    transform: translateX(50%);
+	}
+
 	.productList, .cartList
 	{	
 
