--- a/public/css/all.css
+++ b/public/css/all.css
@@ -4,9 +4,20 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+label
+{
+    font-weight:800;
+    font-family:Helvetica;
+}
+
 .max-height
 {
     height: 100%;
+}
+
+.file-input
+{
+    width:0 !important;
 }
 
 .nav-wrapper
@@ -64,6 +75,30 @@
     border-radius:50%;
     position: absolute;
     right:-27px;
+}
+
+.overlay-close-btn
+{
+    background: rgb(255,0,0);
+    background:linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(255,85,85,1) 50%, rgba(255,0,0,1) 100%);
+    height:100%;
+    border:0;
+    vertical-align: center;
+    position:fixed;
+
+    transition: all 0.3s linear;
+
+}
+
+.overlay-close-btn .fa-angle-right
+{
+    font-size:50px;
+    width:40px;
+}
+
+.overlay-close-btn:hover
+{
+    background: linear-gradient(90deg, rgba(255,51,51,1) 20%, rgba(255,110,110,1) 50%, rgba(255,51,51,1) 84%);
 }
 
 
@@ -229,11 +264,7 @@
 
 }
 
-.product-search-box label
-{
-    font-weight:800;
-    font-family:Helvetica;
-}
+
 
 
 
@@ -277,6 +308,132 @@
 
 
 
+#product-detail-overlay, #product-setting-overlay
+{
+    height: 100%;
+    width: 100%;
+
+    position: fixed;
+
+    top:0;
+    right: -100vw;
+
+    background:transparent;
+
+    z-index: 1;
+    transition: right 0.3s linear;
+}
+
+#product-detail-overlay.active, #product-setting-overlay.active
+{
+    background:linear-gradient(90deg, rgba(0,0,0,0.26934523809523814) 0%, rgba(0,0,0,0.7483368347338936) 0%);
+    right: 0;
+
+}
+
+
+#product-detail,#product-setting
+{
+    width:calc(100% - 250px - 2%);
+    height:100%;
+
+    position: absolute;
+
+    background:white;
+    opacity:1;   
+
+    right:0;
+
+    z-index:2;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+
+}
+
+#product-detail form
+{
+    padding:30px 15px;
+}
+
+#product-detail #img
+{
+    height:200px;
+    width:200px;
+}
+
+#product-detail #imgDetail
+{
+    width:100%;
+    height:auto;
+}
+
+#myForm button
+{
+    width:100%;
+}
+
+#typesTable, #brandsTable
+{
+    height:50vh;
+}
+
+#product-setting input
+{
+    width:auto;
+}
+
+
+
+/*------------------------------------------------------------------------------------------------*/
+/*Account Page*/
+
+#account-detail-overlay
+{
+    height: 100%;
+    width: 100%;
+
+    position: fixed;
+
+    top:0;
+    right: -100vw;
+
+    background:transparent;
+
+    z-index: 1;
+    transition: right 0.3s linear;
+}
+
+#account-detail-overlay.active
+{
+    background:linear-gradient(90deg, rgba(0,0,0,0.26934523809523814) 0%, rgba(0,0,0,0.7483368347338936) 0%);
+    right: 0;
+
+}
+
+
+#account-detail
+{
+    width:calc(100% - 250px - 2%);
+    height:100%;
+
+    position: absolute;
+
+    background:white;
+    opacity:1;   
+
+    right:0;
+
+    z-index:2;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#account-detail form
+{
+    padding:30px 15px;
+}
 
 
 /*------------------------------------------------------------------------------------------------*/
