--- a/public/css/RWD_max991.css
+++ b/public/css/RWD_max991.css
@@ -259,7 +259,19 @@
 	    position:relative;
 	}
 
+	.account-btn-box
+	{
+		height:100%;
+		padding-left:5px;
+		padding-right:5px;
+	}
+	.account-btn-box button
+	{
+	    padding:3px 0;   
+	    font-size:16px;
 
+	    width:100%;
+	}
 
 
 	/*------------------------------------------------------------------------------------------------*/
