--- a/public/css/all.css
+++ b/public/css/all.css
@@ -222,105 +222,6 @@ input[disabled] {
 	height:100vh;
 }
 
-/*.cart, .product-list .product
-{
-	margin:10px 10px;
-	box-shadow: 3px 3px 5px black;
-    border-radius: 10px 0 0 0 ;
-    padding:5px 0;
-	background:white;
-    text-align: center;
-
-}*/
-
-.product-list
-{   
-
-    height:100%;
-    
-    padding-left:calc(100% - 95%) !important;
-    padding-right:calc(100% - 95%) !important;
-    overflow-y: auto;
-    background: #222222;
-    box-shadow: -3px 0px 5px 0px #FFD32B;
-  /*  background: linear-gradient(135deg, rgba(0,0,0,1) 0%, rgba(126,126,126,1) 52%, rgba(0,0,0,1) 100%);
-*/
-
-}
-
-.cart-list
-{
-    height:90%;
-    overflow-y:auto;
-    background:#E0E0E0;
-    background-image: url('/img/shopping-cart.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 150px 150px;
-
-}
-
-
-.product-list .product
-{
-    width:40%;
-    /*min-width:160px;*/
-    display: inline-block;
-    margin:10px 10px;
-    box-shadow: 3px 3px 5px black;
-    /*border-radius: 10px 0 0 0 ;*/
-    padding:5px;
-    background:white;
-    text-align: center;
-}
-
-
-.cart:hover
-{
-	transform: scale(1.05,1.05);
-}
-
-#place-order-overlay
-{
-    height: 100%;
-    width: 100%;
-
-    position: fixed;
-
-    top:0;
-    right: -100vw;
-
-    background:transparent;
-
-    z-index: 1;
-    transition: right 0.3s linear;
-}
-
-#place-order-overlay.active
-{
-    background:linear-gradient(90deg, rgba(0,0,0,0.26934523809523814) 0%, rgba(0,0,0,0.7483368347338936) 0%);
-    right: 0;    
-}
-
-#place-order
-{
-    background: white;
-    position:relative;
-    margin-left:auto;
-    margin-right:auto;
-    width:80%;
-    height:100%;
-}
-
-.order-box
-{
-    height:10%;
-    background:#E0E0E0;
-    box-shadow: 0px -8px 5px 0px rgba(0,0,0,0.75);
-
-
-}
-
 .cart-search-box
 {
     padding:10px !important;
@@ -332,6 +233,116 @@ input[disabled] {
     width:100%;
 
 }
+.product-list
+{   
+
+    height:100%;
+    
+    overflow-y: auto;
+    background: #E0E0E0;
+
+}
+
+.product-list .product img
+{
+    height:100%;
+    width:90%;
+}
+
+.btn-position
+{
+    position: absolute;
+    bottom:0;
+    left:0;
+}
+
+.product-list .product
+{
+    background:white;
+    margin: 15px 0;
+    height:25vh;
+    padding:5px;
+
+
+}
+
+.cart-list
+{
+    height:90%;
+    overflow-y:auto;
+    background: #222222;
+    background-image: url('/img/shopping-cart.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 150px 150px;
+
+}
+
+ .cart
+{
+    width:40%;
+    /*min-width:160px;*/
+    display: inline-block;
+    margin:10px 10px;
+    /*box-shadow: 3px 3px 5px black;*/
+    /*border-radius: 10px 0 0 0 ;*/
+    padding:5px;
+    background:white;
+    text-align: center;
+}
+
+.cart button
+{
+    width:100%;
+}
+
+.cart p, .cart img, .cart button
+{
+    
+    margin-bottom:5px ;
+}
+
+.order-box
+{
+    height:10%;
+    background:#222222;
+    box-shadow: 0px -8px 5px 0px rgba(0,0,0,0.75);
+}
+
+#place-order-overlay, #about-product-overlay
+{
+    height: 100%;
+    width: 100%;
+
+    position: fixed;
+
+    top:100vh;
+    right:0;
+
+    background:transparent;
+
+    z-index: 1;
+    transition: top 0.3s linear;
+}
+
+#place-order-overlay.active , #about-product-overlay.active
+{
+    background:linear-gradient(90deg, rgba(0,0,0,0.26934523809523814) 0%, rgba(0,0,0,0.7483368347338936) 0%);
+    top:0;    
+}
+
+#place-order, #about-product
+{
+    background: white;
+    position:relative;
+    margin-left:auto;
+    margin-right:auto;
+    width:80%;
+    height:100%;
+    overflow-y:auto;
+}
+
+
 
 
 
@@ -603,3 +614,24 @@ input[disabled] {
 }
 /*------------------------------------------------------------------------------------------------*/
 
+/*Order Page*/
+
+.order-manager-box
+{
+    height:100%;
+}
+
+.order-manager
+{
+    background: white;
+    padding: 20px 30px;
+    border-radius:5px;
+    height:90%;
+    margin:0 15px;
+    box-sizing: border-box;
+}
+
+#order-table
+{
+    height:90%;
+}
