--- a/public/css/all.css
+++ b/public/css/all.css
@@ -245,7 +245,7 @@ input[disabled] {
 
 .product-list .product img
 {
-    height:100%;
+    height:25vh;
     width:90%;
 }
 
@@ -260,7 +260,7 @@ input[disabled] {
 {
     background:white;
     margin: 15px 0;
-    height:25vh;
+    height:auto;
     padding:5px;
 
 
