--- a/public/css/RWD_max991.css
+++ b/public/css/RWD_max991.css
@@ -45,19 +45,48 @@
 	    padding: 0;
 	}
 
-	#sidebar ul li a {
-	    padding: 20px 10px;
+	#sidebar ul li a
+	{
+	    padding: 0 10px;
 	    font-size: 0.85em;
 	}
 
-	#sidebar ul li a i {
+	#sidebar ul li a i
+	{
 	    margin-right:  0;
 	    display: block;
 	    font-size: 1.8em;
-	    margin-bottom: 5px;
 	}
 
 
+	#sidebar .username
+	{
+	    font-size: 0.85em;
+	}
+
+	#siderbar .username i
+	{
+		font-size:1.8em;
+		margin-right:  0;
+		display: block;
+	}
+
+	#sidebar .nav-btn:active, #sidebar .logout-btn:active
+	{
+	   text-decoration: none;
+	   background:#516874;
+	}
+
+	#sidebar .logout-btn
+	{
+	    border-radius:0;
+	    left:0px;
+	    bottom:0px;
+	    width:100%;
+	    padding:10px 0;
+	    transition:all 0.3s linear;
+	    text-align: center;
+	}
 	.productList, .cartList
 	{	
 
@@ -119,7 +148,6 @@
 
 	}
 
-
 	.product-list .product
 	{
 		height:auto;
@@ -133,10 +161,32 @@
 		width:100px;
 	}
 
+	.product-list p
+	{
+	    margin-bottom:5px;
+	}
+
+	.product-list .p-name
+	{
+	    font-size:1em;
+	    font-weight:800;
+	}
+
+	.product-list .p-price
+	{
+	    font-size:1em;
+	}
+
 	.product-list .product .atc
 	{
 		display:none;
 	}
+
+	.product-list .p-qty
+	{
+	    margin-top:0;
+	}
+
 
 	.btn-position
 	{
@@ -176,6 +226,13 @@
 		position:absolute;
 		right:5px;
 	}
+
+	#place-order,#about-product
+	{
+	   
+	    width:100%;
+	}
+
 	/*------------------------------------------------------------------------------------------------*/
 
 	/*Product Manager */
